Converted legendTextNotPlaceholder to Selenium

--- a/test/assessmentSpecs/specs/legendTextNotPlaceholder/legendTextNotPlaceholder.html
+++ b/test/assessmentSpecs/specs/legendTextNotPlaceholder/legendTextNotPlaceholder.html
@@ -8,7 +8,7 @@
 
         <form action="http://example.com/donut" method="post">
             <fieldset>
-                <legend class="quail-failed-element">legend</legend>
+                <legend id="assert-1">legend</legend>
                 <p>
                     <input type="radio" name="flavour" id="choc" value="chocolate" checked="checked"
                     />
@@ -30,7 +30,7 @@
 
         <form action="http://example.com/donut" method="post">
             <fieldset>
-                <legend>Donut Type</legend>
+                <legend id="assert-2">Donut Type</legend>
                 <p>
                     <input type="radio" name="flavour" id="choc" value="chocolate" checked="checked"
                     />
