Converted objectMustContainText to Selenium

--- a/test/assessmentSpecs/specs/objectMustContainText/objectMustContainText.html
+++ b/test/assessmentSpecs/specs/objectMustContainText/objectMustContainText.html
@@ -5,18 +5,18 @@
 </head>
 <body>
 	<div data-expected="fail">
-		<object classid="http://www.miamachina.it/analogclock.py" title="a clock object" class="quail-failed-element">
-			<img src="../assets/clock.png" />
+		<object id="assert-1" classid="http://www.miamachina.it/analogclock.py" title="a clock object">
+			<img src="assets/clock.png" />
 		</object>
 	</div>
 
 	<div data-expected="fail">
-		<object classid="http://www.miamachina.it/analogclock.py" title="a clock object" class="quail-failed-element">
+		<object id="assert-2" classid="http://www.miamachina.it/analogclock.py" title="a clock object">
 		</object>
 	</div>
 
 	<div data-expected="pass">
-		<object classid="http://www.miamachina.it/analogclock.py" title="a clock object">
+		<object id="assert-3" classid="http://www.miamachina.it/analogclock.py" title="a clock object">
 			Here is some text that describes the object and its operation.
 		</object>
 	</div>
