Converted tableSummaryIsEmpty to Selenium

--- a/test/assessmentSpecs/specs/tableSummaryIsEmpty/tableSummaryIsEmpty.html
+++ b/test/assessmentSpecs/specs/tableSummaryIsEmpty/tableSummaryIsEmpty.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div data-expected="fail">
-        <table border="1" summary="" class="quail-failed-element">
+        <table id="assert-1" border="1" summary="">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -46,7 +46,7 @@
     </div>
 
     <div data-expected="pass">
-        <table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
+        <table id="assert-2" border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
