Converted tableLayoutDataShouldNotHaveTh to Selenium

--- a/test/assessmentSpecs/specs/tableLayoutDataShouldNotHaveTh/tableLayoutDataShouldNotHaveTh.html
+++ b/test/assessmentSpecs/specs/tableLayoutDataShouldNotHaveTh/tableLayoutDataShouldNotHaveTh.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div data-expected="fail">
-        <table border="0" cellpadding="5" summary="this table is used to create 2 columns of text" class="quail-failed-element">
+        <table id="assert-1" border="0" cellpadding="5" summary="this table is used to create 2 columns of text">
             <tr>
                 <th>Latin is a dead language.</th>
                 <th>The English language thrives.</th>
@@ -39,7 +39,7 @@
     </div>
 
     <div data-expected="inapplicable">
-        <table border="0" cellpadding="5" summary="this table is used to create 2 columns of text">
+        <table id="assert-2" border="0" cellpadding="5" summary="this table is used to create 2 columns of text">
             <tr>
                 <td>Latin is a dead language.</td>
                 <td>The English language thrives.</td>
