Converted tableLayoutHasNoCaption to Selenium

--- a/test/assessmentSpecs/specs/tableLayoutHasNoCaption/tableLayoutHasNoCaption.html
+++ b/test/assessmentSpecs/specs/tableLayoutHasNoCaption/tableLayoutHasNoCaption.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div data-expected="fail">
-    <table border="0" cellpadding="5" class="quail-failed-element">
+    <table id="assert-1" border="0" cellpadding="5">
       <caption>Latin And English Text</caption>
       <tr>
         <td>
@@ -36,7 +36,7 @@
   </div>
 
   <div data-expected="inapplicable">
-    <table border="0" cellpadding="5">
+    <table id="assert-2" border="0" cellpadding="5">
       <tr>
         <td>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
