--- a/test/assessmentSpecs/specs/tableLayoutHasNoSummary/tableLayoutHasNoSummary.html
+++ b/test/assessmentSpecs/specs/tableLayoutHasNoSummary/tableLayoutHasNoSummary.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div data-expected="fail">
-        <table border="0" cellpadding="5" summary="OMG table for layout" class="quail-failed-element">
+        <table id="assert-1" border="0" cellpadding="5" summary="OMG table for layout">
             <tr>
                 <td>This would be a sidebar.</td>
                 <td>
@@ -26,7 +26,7 @@
     </div>
     <div data-expected="fail">
 
-        <table border="0" cellpadding="5" summary="OMG table for layout" class="quail-failed-element">
+        <table id="assert-2" border="0" cellpadding="5" summary="OMG table for layout">
             <tr>
                 <td rowspan="3">This would be a sidebar.</td>
             </tr>
@@ -42,7 +42,7 @@
     </div>
     <div data-expected="fail">
 
-        <table border="0" cellpadding="5" summary="this table is used to create 2 columns of text" class="quail-failed-element">
+        <table id="assert-3" border="0" cellpadding="5" summary="this table is used to create 2 columns of text">
             <tr>
                 <td>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -72,37 +72,7 @@
     </div>
     <div data-expected="pass">
 
-        <table border="0" cellpadding="5">
-            <tr>
-                <td>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </td>
-                <td>
-                    But I must explain to you how all this mistaken idea of denouncing pleasure
-                    and praising pain was born and I will give you a complete account of the
-                    system, and expound the actual teachings of the great explorer of the truth,
-                    the master-builder of human happiness. No one rejects, dislikes, or avoids
-                    pleasure itself, because it is pleasure, but because those who do not know
-                    how to pursue pleasure rationally encounter consequences that are extremely
-                    painful. Nor again is there anyone who loves or pursues or desires to obtain
-                    pain of itself, because it is pain, but because occasionally circumstances
-                    occur in which toil and pain can procure him some great pleasure. To take
-                    a trivial example, which of us ever undertakes laborious physical exercise,
-                    except to obtain some advantage from it? But who has any right to find
-                    fault with a man who chooses to enjoy a pleasure that has no annoying consequences,
-                    or one who avoids a pain that produces no resultant pleasure.
-                </td>
-            </tr>
-        </table>
-    </div>
-    <div data-expected="pass">
-
-        <table border="0" cellpadding="5" summary="">
+        <table id="assert-4" border="0" cellpadding="5" summary="">
             <tr>
                 <td>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
