Converted tableLayoutMakesSenseLinearized to Selenium

--- a/test/assessmentSpecs/specs/tableLayoutMakesSenseLinearized/tableLayoutMakesSenseLinearized.html
+++ b/test/assessmentSpecs/specs/tableLayoutMakesSenseLinearized/tableLayoutMakesSenseLinearized.html
@@ -5,10 +5,10 @@
 </head>
 <body>
   <div data-expected="fail">
-    <table class="quail-failed-element">
+    <table id="assert-1">
       <tr>
         <td>
-          <img src="../assets/logo.png" alt="XYZ mountaineering" />
+          <img src="assets/logo.png" alt="XYZ mountaineering" />
         </td>
         <td>top!</td>
       </tr>
@@ -19,7 +19,7 @@
   </div>
 
   <div data-expected="fail">
-    <table class="quail-failed-element">
+    <table id="assert-2">
       <thead>
         <tr>
           <td>Header A</td>
@@ -40,64 +40,5 @@
       </tbody>
     </table>
   </div>
-
-  <div data-expected="pass">
-    <table>
-      <thead>
-        <tr>
-          <td>Column A</td>
-          <td>Column B</td>
-          <td>Column C</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Row a</td>
-          <td>Row b</td>
-          <td>Row c</td>
-        </tr>
-        <tr>
-          <td>Row a</td>
-          <td>Row b</td>
-          <td>Row c</td>
-        </tr>
-        <tr>
-          <td>Row a</td>
-          <td>Row b</td>
-          <td>Row c</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div data-expected="pass">
-    <table>
-      <thead>
-        <tr>
-          <td>Column A</td>
-          <td>Column B</td>
-          <td>Column C</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Row a</td>
-          <td>Row b</td>
-          <td>Row c</td>
-        </tr>
-        <tr>
-          <td>Row a</td>
-          <td>Row b</td>
-          <td>Row c</td>
-        </tr>
-        <tr>
-          <td>Row a</td>
-          <td>Row b</td>
-          <td>Row c</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
   </body>
 </html>
