Converted tableSummaryDoesNotDuplicateCaption to Selenium

--- a/test/assessmentSpecs/specs/tableSummaryDoesNotDuplicateCaption/tableSummaryDoesNotDuplicateCaption.html
+++ b/test/assessmentSpecs/specs/tableSummaryDoesNotDuplicateCaption/tableSummaryDoesNotDuplicateCaption.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div data-expected="fail">
-    <table border="1" summary="cups of coffee consumed by each senator"  class="quail-failed-element">
+    <table id="assert-1" border="1" summary="cups of coffee consumed by each senator">
       <caption>Cups of coffee consumed by each senator</caption>
       <tr>
         <th>name</th>
@@ -47,7 +47,7 @@
   </div>
 
   <div data-expected="pass">
-    <table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
+    <table id="assert-2" border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
       <caption>Cups of coffee consumed by each senator</caption>
       <tr>
         <th>name</th>
