--- a/test/assessmentSpecs/specs/tableSummaryIsNotTooLong/tableSummaryIsNotTooLong.html
+++ b/test/assessmentSpecs/specs/tableSummaryIsNotTooLong/tableSummaryIsNotTooLong.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div data-expected="fail">
-    <table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar." class="quail-failed-element">
+    <table id="assert-1" border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
       <tr>
         <th>name</th>
         <th>number of cups</th>
