Converted tableUsesScopeForRow to Selenium

--- a/test/assessmentSpecs/specs/tableUsesScopeForRow/tableUsesScopeForRow.html
+++ b/test/assessmentSpecs/specs/tableUsesScopeForRow/tableUsesScopeForRow.html
@@ -15,7 +15,7 @@
       </thead>
       <tbody>
         <tr>
-          <td class="quail-failed-element"><strong>Row one</strong></td>
+          <td id="assert-1" class="quail-failed-element"><strong>Row one</strong></td>
           <td>1</td>
           <td>2</td>
         </tr>
@@ -41,7 +41,7 @@
         <tr>
           <td>1</td>
           <td>2</td>
-          <td class="quail-failed-element"><strong>Row one</strong></td>
+          <td id="assert-2" class="quail-failed-element"><strong>Row one</strong></td>
         </tr>
         <tr>
           <td>1</td>
