Converted fieldsetHasLabel to Selenium

--- a/test/assessmentSpecs/specs/fieldsetHasLabel/fieldsetHasLabel.html
+++ b/test/assessmentSpecs/specs/fieldsetHasLabel/fieldsetHasLabel.html
@@ -7,7 +7,7 @@
 	<div data-expected="fail">
 
 		<form>
-			<fieldset class="quail-failed-element">
+			<fieldset id="assert-1" class="quail-failed-element">
 				<input id="red" type="radio" name="color" value="red" />
 				<label for="red">Red</label>
 				<br />
