--- a/test/assessmentSpecs/specs/tableAxisHasCorrespondingId/tableAxisHasCorrespondingId.html
+++ b/test/assessmentSpecs/specs/tableAxisHasCorrespondingId/tableAxisHasCorrespondingId.html
@@ -8,7 +8,9 @@
 		<table>
 			<thead>
 				<tr><th>Group one</th><th>Group two</th></tr>
-				<tr><th axis="a" class="quail-failed-element">Axis A</th><th axis="b">Axis B</th>
+				<tr>
+          <th id="assert-1" axis="a" class="quail-failed-element">Axis A</th>
+          <th id="assert-2" axis="b">Axis B</th>
 			</thead>
 			<tbody>
 				<tr><td>A</td><td>B</td></tr>
@@ -20,8 +22,12 @@
 	<div data-expected="pass" title="Table where axis attributes are matched">
 		<table>
 			<thead>
-				<tr><th id="a1">Group one</th><th id="b1">Group two</th></tr>
-				<tr><th axis="a1">Axis A</th><th axis="b1">Axis B</th>
+				<tr>
+          <th id="a1">Group one</th><th id="b1">Group two</th>
+        </tr>
+				<tr>
+          <th id="assert-3" axis="a1">Axis A</th>
+          <th id="assert-4" axis="b1">Axis B</th>
 			</thead>
 			<tbody>
 				<tr><td>A</td><td>B</td></tr>
