Converted tabularDataIsInTable to Selenium

--- a/test/assessmentSpecs/specs/tabularDataIsInTable/tabularDataIsInTable.html
+++ b/test/assessmentSpecs/specs/tabularDataIsInTable/tabularDataIsInTable.html
@@ -6,7 +6,7 @@
 <body>
   <div data-expected="fail">
     <p>
-      <pre class="quail-failed-element">
+      <pre id="assert-1" class="quail-failed-element">
 name				number of cups	type   		with sugar
 Adams, Willie		2				regular		sugar
 Bacon, Lise			4				regular		no sugar
