--- a/test/assessmentSpecs/specs/documentIsWrittenClearly/documentIsWrittenClearly.html
+++ b/test/assessmentSpecs/specs/documentIsWrittenClearly/documentIsWrittenClearly.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div data-expected="fail">
-        <p class="quail-failed-element">
+        <p id="assert-1">
             Objectively disintermediate B2B action items vis-a-vis backward-compatible
                 methods of empowerment. Dynamically disseminate just in time growth strategies
                 after scalable convergence. Continually mesh wireless value through tactical
@@ -37,11 +37,11 @@
     </div>
     <div data-expected="pass">
 
-        <p>The quick brown fox jumped over the lazy dogs.</p>
+        <p id="assert-2">The quick brown fox jumped over the lazy dogs.</p>
     </div>
 
     <div data-expected="pass">
-        <p>
+        <p id="assert-3">
             The quick brown fox jumped over the lazy dogs. The quick brown fox jumped
                 over the lazy dogs. The quick brown fox jumped over the lazy dogs. The
                 quick brown fox jumped over the lazy dogs. The quick brown fox jumped over
