Converted imgAltIsTooLong to Selenium

--- a/test/assessmentSpecs/specs/imgAltIsTooLong/imgAltIsTooLong.html
+++ b/test/assessmentSpecs/specs/imgAltIsTooLong/imgAltIsTooLong.html
@@ -6,13 +6,13 @@
 	<body>
 		<div data-expected="fail">
 			<p>
-        <img src="../assets/rex.jpg" alt="A picture of Rex the cat with some extra text. This is very long alt text. In fact, it was much much too long for this image. Sort alt text would be much better and this alt text should be shortened." class="quail-failed-element"/>
+        <img id="assert-1" src="assets/rex.jpg" alt="A picture of Rex the cat with some extra text. This is very long alt text. In fact, it was much much too long for this image. Sort alt text would be much better and this alt text should be shortened." class="quail-failed-element"/>
       </p>
 		</div>
 
 		<div data-expected="pass">
 			<p>
-				<img src="../assets/rex.jpg" alt="photo of rex the cat" />
+				<img id="assert-2" src="assets/rex.jpg" alt="photo of rex the cat" />
       </p>
 		</div>
 
