--- a/test/assessmentSpecs/specs/imgImportantNoSpacerAlt/imgImportantNoSpacerAlt.html
+++ b/test/assessmentSpecs/specs/imgImportantNoSpacerAlt/imgImportantNoSpacerAlt.html
@@ -5,15 +5,15 @@
 </head>
 <body>
 	<div data-expected="fail">
-		<img src="../assets/rex.jpg" alt="  " width="150" height="105" class="quail-failed-element"/>
+		<img id="assert-1" src="assets/rex.jpg" alt="  " width="150" height="105" class="quail-failed-element"/>
 	</div>
 
 	<div data-expected="pass">
-		<img src="../assets/big-fail.png" alt="" />
+		<img id="assert-2" src="assets/big-fail.png" alt="" />
 	</div>
 
 	<div data-expected="pass">
-		<img src="../assets/spacer.gif" alt="  " width="5" height="5" />
+		<img id="assert-3" src="assets/spacer.gif" alt="  " width="5" height="5" />
 	</div>
 
   </body>
