Converted imgMapAreasHaveDuplicateLink to Selenium

--- a/test/assessmentSpecs/specs/imgMapAreasHaveDuplicateLink/imgMapAreasHaveDuplicateLink.html
+++ b/test/assessmentSpecs/specs/imgMapAreasHaveDuplicateLink/imgMapAreasHaveDuplicateLink.html
@@ -13,7 +13,7 @@
             </map>
         </p>
         <p>
-            <img src="../assets/navigation.png" usemap="#imagemap" alt="navigation" class="quail-failed-element" />
+            <img id="assert-1" src="assets/navigation.png" usemap="#imagemap" alt="navigation" />
         </p>
         <p>
             <a href="horses1.html">Horses</a> | <a href="dogs1.html">Dogs</a>
@@ -29,8 +29,7 @@
             </map>
         </p>
         <p>
-            <img src="../assets/navigation.png" usemap="#imagemap2" alt="navigation"
-            class="quail-failed-element" />
+            <img id="assert-2" src="assets/navigation.png" usemap="#imagemap2" alt="navigation" />
         </p>
     </div>
 
@@ -43,8 +42,7 @@
             </map>
         </p>
         <p>
-            <img src="../assets/navigation.png" usemap="#imagemap3" alt="navigation"
-            />
+            <img id="assert-3" src="assets/navigation.png" usemap="#imagemap3" alt="navigation" />
         </p>
         <p>
             <a href="horses3.html">Horses</a> | <a href="dogs3.html">Dogs</a> | <a href="birds3.html">Birds</a>
