--- a/test/assessmentSpecs/specs/imgNonDecorativeHasAlt/imgNonDecorativeHasAlt.html
+++ b/test/assessmentSpecs/specs/imgNonDecorativeHasAlt/imgNonDecorativeHasAlt.html
@@ -8,14 +8,14 @@
 		<p>
 			We would like to adopt another pet and are looking for one that is similar to what's shown in the picture.
 		</p>
-		<img src="../assets/rex.jpg" alt="" width="150" height="105" class="quail-failed-element"/>
+		<img id="assert-1" src="assets/rex.jpg" alt="" width="150" height="105" />
 	</div>
 
 	<div data-expected="pass">
 		<p>
 			We would like to adopt another pet and are looking for one that is similar to what's shown in the picture.
 		</p>
-		<img src="../assets/rex.jpg" alt="large brown and black cat named Rex" width="150" height="105" />
+		<img id="assert-2" src="assets/rex.jpg" alt="large brown and black cat named Rex" width="150" height="105" />
 	</div>
 
   </body>
