--- a/test/assessmentSpecs/specs/imgWithMathShouldHaveMathEquivalent/imgWithMathShouldHaveMathEquivalent.html
+++ b/test/assessmentSpecs/specs/imgWithMathShouldHaveMathEquivalent/imgWithMathShouldHaveMathEquivalent.html
@@ -6,7 +6,7 @@
 <body>
 	<div data-expected="fail">
 		<p>The following image shows the uncertainty principle:</p>
-		<img src="../assets/math.png" alt="the heisenberg uncertainty principle" class="quail-failed-element"/>
+		<img id="assert-1" src="assets/math.png" alt="the heisenberg uncertainty principle" class="quail-failed-element"/>
 	</div>
 
   </body>
