--- a/test/assessmentSpecs/specs/doctypeProvided/doctypeProvided-fail.html
+++ b/test/assessmentSpecs/specs/doctypeProvided/doctypeProvided-fail.html
@@ -1,4 +1,4 @@
-<html class="quail-test self-fail" data-expected="fail">
+<html id="assert-1" data-expected="fail">
 	<head>
 		<title>doctypeProvided</title>
 	</head>
