--- a/test/assessmentSpecs/specs/doctypeProvided/doctypeProvided.html
+++ b/test/assessmentSpecs/specs/doctypeProvided/doctypeProvided.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="quail-test self-fail" data-expected="pass">
+<html id="assert-1" data-expected="pass">
 	<head>
 		<title>doctypeProvided</title>
 	</head>
