--- a/test/assessmentSpecs/specs/documentAbbrIsUsed/documentAbbrIsUsed.html
+++ b/test/assessmentSpecs/specs/documentAbbrIsUsed/documentAbbrIsUsed.html
@@ -5,21 +5,21 @@
 </head>
 <body>
 	<div data-expected="fail">
-		<p class="quail-failed-element">Everyone loves QUAIL.</p>
+		<p id="assert-1" class="quail-failed-element">Everyone loves QUAIL.</p>
 	</div>
 
 	<div data-expected="pass">
-		<p>
+		<p id="assert-2">
 			Everyone loves <abbr title="Quail accesibility information library">QUAIL</abbr>.
 		</p>
 	</div>
 
 	<div data-expected="pass">
-		<p>This might be A acronym.</p>
+		<p id="assert-3">This might be A acronym.</p>
 	</div>
 
 	<div data-expected="pass">
-		<p>hello</p>
+		<p id="assert-4">hello</p>
 	</div>
 
   </body>
